--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>IDENTIFICAÇÃO DE ESBOÇO</title>
+  <title>Identificacão de Desenhos</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -37,9 +37,11 @@
     </h1>
     <p id="label">Nome: </p>
     <p id="confidence">Precissão: </p>
-    <p id="desafio">Esboço a Ser Desenhado: </p>
+
+    <p id="desafio">Esboço a Ser Desenhado: Lapis</p>
+    
     <p id="pontos">Pontuação: </p>
-    <p id="tempo">Tempo: </p> 
+    <p id="tempo">Tempo: </p>
   </center>
 
 <script src="main.js"></script>
