--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <h1>Desenho Rápido
       <button id="show_sketch" class="btn btn-info" data-toggle="modal" data-target="#myModal">Exibir Esboços</button>
     </h1>
+    <button onclick="jogar();" class="btn btn-success">Jogar</button>
     <p id="label">Nome: </p>
     <p id="confidence">Precissão: </p>
 
